src/less/site.less
@import 'base/_settings.less';
@import 'base/_mixins.less';
@import 'base/reset.less';
@import 'base/syntax.less';

*, ::before, ::after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    background-color: @color-background;
    font-size: @font-size;

    .screen-lrg({
        font-size: @font-size + 12.5%;
    });
}

body {
    background-color: @color-background;
    border-top: @layout-border-top-width solid @color-primary;
    color: @font-color;
    font-family: @font-family-serif;
    font-feature-settings: "kern", "liga", "clig", "calt";
    font-kerning: normal;
    font-size: 1em;
    font-variant-ligatures: common-ligatures contextual;
    line-height: @line-height;
    text-rendering: optimizeLegibility;
}

h1, h2, h3, h4, h5, h6 {
    font-family: @font-family-sans;
    font-weight: 700;
    margin: 1.5rem 0 .345rem 0;
}

p {
    margin-bottom: 1.5rem;
}

a {
    .hover(@color) {
        &:hover,
        &:active {
            border-color: @color;
            color: @color;
        }
    }

    &:link,
    &:visited {
        border-bottom: .15rem solid @link-color;
        color: @font-color;
        outline: none;
        text-decoration: none;
        transition: 0.2s;
    }

    &:hover,
    &:active {
        .hover(@link-color-hover);
    }

    &.goog {
        @color: rgba( 221, 75, 57, 1);
        .hover(@color);
    }

    &.twit {
        @color: rgba(0, 172, 237, 1);
        .hover(@color);
    }

    &.gh {
        @color: rgba(0, 0, 0, 1);
        .hover(@color);
    }

    &.fb {
        @color: rgba(59, 89, 152, 1);
        .hover(@color);
    }

    &.stack {
        @color: rgba(244, 128, 36, 1);
        .hover(@color);
    }
}

pre,
code,
kbd {
    font-family: @font-family-fixed;
    font-size: .9rem;
}

kbd {
    font-style: italic;
}

pre {
    background-color: @color-alt;
    margin: 1rem 0;
    overflow-x: scroll;
    padding: 2%;

    & > code {
        color: #d0d4a5;
        display: block;
    }
}

svg {
    color: inherit;
    fill: currentColor;
}

img {
    display: block;
}

hr {
    border-bottom: 1px solid @alt-light;
    border-width: 0 0 .1rem 0;
    margin: 1.5rem 0;
}

em {
    font-style: italic;
}

strong {
    font-weight: 700;
}

sup,
sub {
    font-size: .75rem;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sup {
    top: -.5rem;
    left: .25rem;
}

sub {
    bottom: -0.5em;
}

main {
    padding: 1em 1em 2em;
    position: relative;
}

::selection {
    background: @color-primary;
    color: contrast(@color-primary, lighten(@color-primary, 80%), darken(@color-primary, 80%));
}


article {
    & > h1 {
        font-size: 2.3rem;
    }

    & > h2 {
        font-size: 1.85rem;
        line-height: 1.2;
    }

    & > h3 {
        font-size: 1.5rem;
    }

    & > h4 {
        font-style: italic;
        font-weight: 400;
    }

    ol,ul {
        margin: 1.5rem 0;
        list-style: none;
    }

    ol {
        counter-reset: start-from 0;

        li {
            &::before{
                counter-increment: start-from;
                content: counter(start-from) ".";
                margin-top: .05rem;
            }
        }
    }

    ul li {
        &::before {
            content: "▪";
            font-weight: bold;
        }
    }

    li {
        position: relative;

        & > ul,
        & > ol {
            margin: 0 0 0 1.5rem;
        }

        &::before {
            color: @color-primary;
            font-family: @font-family-sans;
            font-weight: normal;
            left: -5em;
            padding-right: 0.5em;
            position: absolute;
            text-align: right;
            width: 5em;
        }
    }

    blockquote {
        background-color: @figure-bg;
        border-left: .1rem solid @color-secondary;
        font-family: @font-family-sans;
        padding: 1rem;
        margin-left: -1rem;

        p:last-of-type  {
            margin-bottom: 0;
        }
    }

    figure {
        font-family: @font-family-sans;
        margin: 1.5rem 0;

        & > * {
            display: block;
            background-color: @figure-caption-bg;
            padding: 1rem;
        }

        img {
            width: 100%;
        }
    }

    figcaption {
        background-color: @figure-caption-bg;;
        font-size: @font-size-small;
        margin-top: -1rem;
        padding: .5rem 1rem;

        :last-child {
            margin-bottom: 0;
        }
    }
}

table {
    border-collapse: collapse;
    width: 100%;

    td,th {
        padding: .5rem;
        border-bottom: 1px solid @alt-light;
    }

    th {
        font-weight: 600;
        text-align: left;
    }

    &.bordered {
        td,th {
            border: 1px solid @alt-light;
        }
    }
}

header {
    .description {
        margin: .5rem 0;
    }
}

#home-welcome,
header {
    h1 {
        .page-header-title();
    }
}

.content-grid {
    display: grid;
    grid-template-rows: auto 1fr auto;
    height: calc(100vh - @layout-border-top-width);
}

.viewport {
    margin: 0 auto;
    max-width: 1200px;
    padding: 1em;
    width: 65vw;
}

.description {
    font-family: @font-family-serif;
    font-size: .9rem;
    font-style: italic;
    font-weight: normal;
    line-height: 1.5rem;
}

.metadata {
    color: @alt-light;
    font-family: @font-family-sans;
    font-size: @font-size-small;
}

.page {
    & > header {
        margin-bottom: 1rem;

        & > * + * {
            margin-top: 1rem;
        }
    }
}

.post {
    :not(pre) > code {
        color: mix(@color-primary, @font-color);
    }

    footer {
        clear: both;
        font-family: @font-family-sans;
        font-size: .75rem;
        margin-top: 1rem;

        ul {
            margin: 0 0 .5rem;
        }

        li::before {
            content: "";
        }

        .taxonomy {
            text-transform: uppercase;

            li {
                display: inline;
                position: relative;

                &::after {
                    content: ",";
                }

                &:last-child::after {
                    content: "";
                }

                a {
                    border-bottom: none;

                    &:link,
                    &:visited {
                        color: @alt-light;
                    }

                    &:hover,
                    &:active {
                        color: @link-color;
                    }
                }
            }
        }
    }
}

.screen-lrg({
    .browse {
        display: grid;
        grid-template-columns: 55% auto 40%;

        .taxonomy {
            grid-column: 3;
        }
    }

    .dual {
        display: grid;
        grid-gap: 1rem;
        grid-auto-columns: 50fr 50fr;
        grid-auto-flow: column;

        figure {
            margin: 0;
            max-width: 100%;
        }
    }

    figure.small {
        float: right;
        margin: 0 0 1rem 1rem;
        max-width: 50%;
    }

    .dual,
    article > figure.normal,
    .highlight {
        width: 110%;
        margin-left: -5%;
    }
});

.teaser {
    border-color: lighten(@color-alt, 25%);
    border-style: solid;
    border-width: 0 0 1px;
    font-size: 1rem;
    padding: .5rem 0;

    .screen-med({
        time {
            float: right;
        }
    });

    .title {
        margin: 0;
    }

    .description {
        margin: 0;
    }

    a {
        border-bottom: none;
    }

    time {
        font-size: @font-size-small;
    }
}

.group {
    border-color: @font-color;
    border-style: solid;
    border-width: .125rem 0 .0;
    margin-top: 2rem;

    .group-title {
        color: @font-color;
        border-color: @font-color;
        border-style: solid;
        border-width: 0 0 .1rem;
        margin: 0;
        padding: .325rem 0;
        text-transform: uppercase;
    }

    a {
        border-bottom: none;

        span {
            display: block;
        }
    }
}

.fl-list {
    li {
        border-bottom: 1px solid @alt-light;

        .screen-medm({
            float: left;
            width: 48%;

            &:nth-child(2n) {
                margin-left: 4%;
            }
        });

        & > a {
            display: block;
            padding: 5px 5px 5px 0;
            position: relative;
            text-transform: uppercase;
        }
    }

    .count {
        position: absolute;
        right: 0;
        top: .3rem;
    }

    &::after {
        clear: both;
        content: "";
        display: table;
    }
}

.copyright {
    font-family: @font-family-sans;
    font-size: @font-size-small;
}

.social {
    a {
        border: none;
        margin-right: .25rem;
    }
}

.icon {
    height: 1rem;
    width: 1rem;
    vertical-align: middle;

    &.large {
        height: 2rem;
        width: 2rem;
    }

    &.small {
        height: .75rem;
        width: .75rem;
    }

    &.left {
        float: left;
        margin-right: .25rem;
    }

    &.right {
        float: right;
        margin-left: .25rem;
    }
}

.pagination {
    display: grid;
    grid-template-columns: 30% auto 30%;
    margin-top: 1.5rem;

    .previous {
        grid-column: 1;
        text-align: left;
    }

    span {
        grid-column: 2;
        text-align: center;
    }

    .next {
        grid-column: 3;
        text-align: right;
    }
}

#site-header {
    font-family: @font-family-sans;
    text-align: center;
    text-transform: uppercase;

    a {
        border-bottom: none;
    }

    li {
        display: inline;
        margin: 0 0 0 2em;
    }

    .branding {
        float: left;
    }

    .screen-medm({
        & {
            text-align: right;
        }
    });
}

#site-footer {
    background-color: @footer-background-color;
    color: @footer-color;

    &::before {
        background-color: @footer-background-color;
        content: "";
        height: ~"calc(100vh - 2em)";
        left: 0;
        position: absolute;
        top: 2em;
        width: 100%;
        z-index: -1;
    }

    a {
        &:link,
        &:visited {
            color: @alt-light;
        }

        &:hover,
        &:active {
            color: @link-color;
        }
    }
}

#home-welcome {
    p {
        margin: 1rem 0;
    }
}

